# 3x100Project

./: .gitignore  Cargo.toml  README.md  Rocket.toml  install.sh
boxes/: 2022-04-17T19:26:50.106161Z-2110002299
page/: static_index.html  style.css
src/: main.rs  site.rs  utils.rs
src/site/: chat.rs  index.rs  utils.rs  ytdl.rs
templates/: index.html.hbs
