[package]
name = "project3x100"
version = "0.1.7"
edition = "2021"
authors = ["GEGAKE","Nxzgul"]


[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["handlebars_templates"]}

serde = { version = "1", features = ["derive"] }
serde_json = "*"

chrono = "*"
colored = {git = "https://github.com/mackwic/colored"}
log = "0.4.11"


rand = "*"