[package]
name = "project3x100"
version = "0.1.8"
edition = "2021"
authors = ["GEGAKE"]


[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["handlebars_templates"]}

tokio = {version = "*", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "*"
mongodb = {version = "*", features = ["tokio-runtime"]}

chrono = "*"
colored = {git = "https://github.com/mackwic/colored"}
log = "0.4.11"
env_logger = "0.9.0"


rand = "*"